--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,4 +20,4 @@ jobs:
           python-version: '3.x'  # Specify the Python version you want to use
 
       - name: Run Python Script
-        run: python star.py  # Replace with the path to your Python script
+        run: python add_star.py  # Replace with the path to your Python script
