--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Python Script
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs at 00:00 UTC every day
+    - cron: '0 0 1 * *'  # Runs at 00:00 UTC every day
   workflow_dispatch:  # Manually trigger the workflow
 
 jobs:
